--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "landing-tesla",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@9.14.4",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
